# hivm

./: CMakeLists.txt  README.TXT
doc/: abstract_revised.doc  ed_johnson_hivm_abstract_revised.doc  hivm-uml.vsd
doc/HivmTex/: EdThesisCommentsbyPetkovic.doc  HivmTex.tex  HivmTex.toc  sfsuthesis.sty
doc/defense/: Thumbs.db  edjohnson-hivm.ppt
samples/data/: RT_wild.seq
samples/with_probability/: README.TXT
samples/with_probability/linux/: APV.sh  APV_short.sh  ATV_LPV.sh  IDV.sh  IDV_short.sh  LPV_short.sh  NFV.sh  SQV_short.sh  model_validate_all.sh  run_all_short_scripts.sh
samples/with_probability/model_validation_results/: APV-modelValidation_t10_cmdline.txt  APV-modelValidation_t2_cmdline.txt  APV-modelValidation_t2_prediction_detailed_results.csv  APV-modelValidation_t2_results.csv  APV-modelValidation_t2t10_cmdline.txt  APV-modelValidation_t2t10_prediction_detailed_results.csv  APV-modelValidation_t2t10_results.csv  ATV-modelValidation_t10_cmdline.txt  ATV-modelValidation_t10_prediction_detailed_results.csv  ATV-modelValidation_t10_trainset_dataset_ids.csv  ATV-modelValidation_t2_cmdline.txt  ATV-modelValidation_t2_results.csv  ATV-modelValidation_t2t10_prediction_detailed_results.csv  IDV-modelValidation_t10_cmdline.txt  IDV-modelValidation_t10_prediction_detailed_results.csv  IDV-modelValidation_t2t10_cmdline.txt  IDV-modelValidation_t2t10_prediction_detailed_results.csv  IDV-modelValidation_t2t10_trainset_dataset_ids.csv  LPV-modelValidation_t2_prediction_detailed_results.csv  LPV-modelValidation_t2t10_cmdline.txt  LPV-modelValidation_t2t10_results.csv  LPV-modelValidation_t2t10_trainset_dataset_ids.csv  NFV-modelValidation_t10_prediction_detailed_results.csv  NFV-modelValidation_t2_cmdline.txt  NFV-modelValidation_t2_prediction_detailed_results.csv  NFV-modelValidation_t2_trainset_dataset_ids.csv  NFV-modelValidation_t2t10_prediction_detailed_results.csv  RTV-modelValidation_t10_cmdline.txt  RTV-modelValidation_t10_prediction_detailed_results.csv  RTV-modelValidation_t2t10_cmdline.txt  RTV-modelValidation_t2t10_prediction_detailed_results.csv  RTV-modelValidation_t2t10_results.csv  SQV-modelValidation_t10_prediction_detailed_results.csv  SQV-modelValidation_t10_results.csv  SQV-modelValidation_t10_trainset_dataset_ids.csv  SQV-modelValidation_t2_cmdline.txt  SQV-modelValidation_t2t10_results.csv  SQV-modelValidation_t2t10_trainset_dataset_ids.csv
samples/with_probability/windows/: APV.bat  ATV_short.bat  IDV.bat  LPV_short.bat  NFV_short.bat  RTV.bat  SQV_short.bat  model_validate_all.bat
samples/without_probability/linux/: APV.sh  APV_short.sh  ATV_LPV.sh  IDV.sh  IDV_short.sh  LPV_short.sh  NFV.sh  NFV_short.sh  RTV.sh  RTV_short.sh  SQV.sh  run_all_short_scripts.sh
samples/without_probability/model_validation_results/: APV-model-validationBest_t10_cmdline.txt  APV-model-validationBest_t10_results.csv  APV-model-validationBest_t2_cmdline.txt  APV-model-validationBest_t2_trainset_dataset_ids.csv  ATV-model-validationBest_t10_results.csv  ATV-model-validationBest_t10_trainset_dataset_ids.csv  ATV-model-validationBest_t2_prediction_detailed_results.csv  IDV-model-validationBest_t10_cmdline.txt  IDV-model-validationBest_t10_prediction_detailed_results.csv  IDV-model-validationBest_t2_cmdline.txt  IDV-model-validationBest_t2_results.csv  IDV-model-validationBest_t2_trainset_dataset_ids.csv  LPV-model-validationBest_t10_cmdline.txt  LPV-model-validationBest_t10_prediction_detailed_results.csv  LPV-model-validationBest_t10_results.csv  LPV-model-validationBest_t2_prediction_detailed_results.csv  NFV-model-validationBest_t10_prediction_detailed_results.csv  NFV-model-validationBest_t10_results.csv  NFV-model-validationBest_t2_trainset_dataset_ids.csv  RTV-model-validationBest_t10_cmdline.txt  RTV-model-validationBest_t10_results.csv  RTV-model-validationBest_t2_prediction_detailed_results.csv  RTV-model-validationBest_t2_trainset_dataset_ids.csv  SQV-model-validationBest_t2_prediction_detailed_results.csv  SQV-model-validationBest_t2_trainset_dataset_ids.csv
samples/without_probability/windows/: APV.bat  IDV_short.bat  LPV_short.bat  NFV.bat  NFV_short.bat  RTV.bat  RTV_short.bat  SQV_short.bat  model_validate_all.bat
src/: BioProcessor.cpp  BioProcessor.hpp  CrossValidationExperiment.cpp  CrossValidationExperiment.hpp  ExperimentAnalyzer.cpp  ExperimentAnalyzer.hpp  ExperimentResult.hpp  FileIO.cpp  FileIO.hpp  Hash.hpp  LibSvmAdapter.cpp  LibSvmAdapter.hpp  Log.cpp  Makefile.am  Options.cpp  PreProcWorkUnit.cpp  PreProcessor.cpp  PreProcessor.hpp  SvmMachine.cpp  SvmWorkUnit.cpp  build_libs.sh  main.cpp  svm.cpp
src/test/: BioProcessorTest.cpp  CrossValidationExperimentTest.cpp  Definitions.hpp  ExperimentAnalyzerTest.cpp  ExperimentTests.cpp  Makefile.am  OptionsTest.cpp  PreProcWorkUnitTest.cpp  PreProcessorTest.cpp  README.TXT  TempTestList.txt  testhivm.vcproj
tags/358/hivm/tags/hivm/trunk/src/: BioProcessor.cpp  FileIO.cpp  Makefile.am  Options.cpp  PreProcessor.hpp  SelfTestExperiment.cpp  SelfTestExperiment.hpp  autogen.sh  main.cpp
tags/358/hivm/tags/hivm/trunk/src/test/: DplTest.cpp  FileIOTest.cpp
tags/358/hivm/tags/hivm/trunk/src/test/data/ExperimentAnalyzerTest/: PR_2006-05-25_v2.0_NFV200.tsv
trunk/: README.TXT
trunk/doc/: hivmSoftwaretodo-Schedule.xls
trunk/doc/HivmTex/: HivmTex.aux  HivmTex.lof  HivmTex.tcp  HivmTex.tps
trunk/samples/data/: PI_wild.seq  RT_Virologic_DataSet_20090823.tsv
trunk/samples/with_probability/: model_validation_results_summary.xls
trunk/samples/without_probability/: model_validation_results_summary.xls
trunk/src/: BioProcessor.cpp  ExperimentAnalyzer.cpp  ExperimentResult.cpp  FunctionObjects.cpp  Hash.cpp  LibSvmAdapter.cpp  LibSvmAdapter.hpp  Options.cpp  Options.hpp  PreProcWorkUnit.hpp  PreProcessor.cpp  PreProcessor.hpp  SvmMachine.cpp  SvmMachine.hpp  SvmWorkUnit.hpp  Types.hpp  ValidationExperiment.cpp  ValidationExperiment.hpp  autogen.sh  build_libs.bat  dpl.cpp  hivm.vcproj  svm.h  testhivm.sh
trunk/src/test/: BoostTests.cpp  Definitions.hpp  FileIOTest.cpp  LibSvmAdapterTest.cpp  (+6 more)
(+316 files in other folders)
