bin_PROGRAMS = hivm 
check_PROGRAMS = testhivm
TESTS = $(check_PROGRAMS)
#testhivm_SOURCES = BioProcessor.cpp BioProcessor.hpp  CrossValidationExperiment.cpp CrossValidationExperiment.hpp ExperimentAnalyzer.cpp ExperimentAnalyzer.hpp ExperimentResult.cpp ExperimentResult.hpp FileIO.cpp FileIO.hpp FunctionObjects.cpp LibSvmAdapter.cpp LibSvmAdapter.hpp LibSvmFacade.h Log.cpp Log.hpp Options.cpp Options.hpp PreProcWorkUnit.cpp PreProcWorkUnit.hpp PreProcessor.cpp PreProcessor.hpp SelfTestExperiment.cpp SelfTestExperiment.hpp StdInclude.hpp SvmMachine.cpp SvmMachine.hpp SvmWorkUnit.cpp SvmWorkUnit.hpp Types.hpp ValidationExperiment.cpp ValidationExperiment.hpp dpl.cpp dpl.h svm.cpp svm.h test/main.cpp
hivm_SOURCES = main.cpp Hash.hpp Hash.cpp BioProcessor.cpp BioProcessor.hpp  CrossValidationExperiment.cpp CrossValidationExperiment.hpp ExperimentAnalyzer.cpp ExperimentAnalyzer.hpp ExperimentResult.cpp ExperimentResult.hpp FileIO.cpp FileIO.hpp FunctionObjects.cpp LibSvmAdapter.cpp LibSvmAdapter.hpp LibSvmFacade.h Log.cpp Log.hpp Options.cpp Options.hpp PreProcWorkUnit.cpp PreProcWorkUnit.hpp PreProcessor.cpp PreProcessor.hpp SelfTestExperiment.cpp SelfTestExperiment.hpp StdInclude.hpp SvmMachine.cpp SvmMachine.hpp SvmWorkUnit.cpp SvmWorkUnit.hpp Types.hpp ValidationExperiment.cpp ValidationExperiment.hpp dpl.cpp dpl.h svm.cpp svm.h
SUBDIRS = test
#LDADD = 3rd_party/boost/lib/*
#INCLUDES = 3rd_party/boost/include/boost-1_33_1 
#LDADD = $(top_builddir)/3rd_party/boost/lib/libboost_filesystem-gcc-mt-1_33_1.a
hivm_LDADD = $(top_builddir)/3rd_party/boost/lib/libboost_filesystem-gcc-mt-sd-1_33_1.a $(top_builddir)/3rd_party/boost/lib/libboost_program_options-gcc-mt-sd-1_33_1.a 
INCLUDES = -I$(top_srcdir)/3rd_party/boost/include/boost-1_33_1
AUTOMAKE_OPTIONS = foreign
#testhivm_LDADD = $(top_builddir)/3rd_party/boost/lib/* -LS$(top_builddir)/3rd_party/boost/lib/libboost_unit_test_framework-gcc-mt-sd-1_33_1.a
